<resources>

    <string name="app_name">智慧工厂</string>

    <!-- splash界面 -->
    <string name="welcome">欢迎使用物联网智慧工厂App</string>
    <string name="version">版本1.0</string>
    <string name="cancel">取消</string>

    <!-- 主界面 -->
    <string name="environment">环境监控</string>
    <string name="temperature_title">温度：</string>
    <string name="temperature_value">22.1</string>
    <string name="humility_title">湿度：</string>
    <string name="humility_value">79.3</string>
    <string name="light_title">光照：</string>
    <string name="light_value">591.4</string>
    <string name="breaking_area_monitoring">禁入区域监控</string>
    <string name="breaking_value">正常</string>
    <string name="device_controlling">设备控制</string>
    <string name="ventilation_system">通风系统：</string>
    <string name="aircondition_system">空调系统：</string>
    <string name="lighting_system">光照系统：</string>
    <string name="breaking_abnormal">有人闯入</string>
    <string name="breaking_normal">正常</string>
    <string-array name="control_status">
        <item>打开</item>
        <item>关闭</item>
        <item>自动</item>
    </string-array>

    <!-- 全局参数设置界面 -->
    <string name="setting">全局参数设置</string>
    <string name="globle_param_setting">全局参数设置</string>
    <string name="cloud_params_setting">物联网云平台参数设置</string>
    <string name="server_address">服务器地址：</string>
    <string name="address_hint">192.168.0.1</string>
    <string name="cloud_project_label">云平台项目标识：</string>
    <string name="cloud_account">云平台账号：</string>
    <string name="cloud_account_password">云平台密码：</string>
    <string name="camera_address_setting">监控摄像设备参数设置</string>
    <string name="camera_address">摄像头地址：</string>
    <string name="sensor_actuator_setting">传感器执行器参数设置</string>
    <string name="temp_sensor_id">温度设备ID：</string>
    <string name="temp_threshold_value">温度阈值：</string>
    <string name="humi_sensor_id">湿度设备ID：</string>
    <string name="humi_threshold_value">湿度阈值：</string>
    <string name="light_sensor_id">光照设备ID：</string>
    <string name="light_threshold_value">光照阈值：</string>
    <string name="body_sensor_id">人体感应ID:</string>
    <string name="light_controller_id">光照控制设备ID：</string>
    <string name="ventilation_controller_id">通风控制设备ID：</string>
    <string name="air_controller_id">空调控制设备ID：</string>
    <string name="save_parsms">保存参数</string>
    <string name="server_address_empty">请输入服务器地址！</string>
    <string name="cloud_project_empty">请输入云平台项目标识！</string>
    <string name="cloud_account_empty">请输入云平台账号！</string>
    <string name="cloud_account_password_empty">请输入云平台密码！</string>
    <string name="camera_address_empty">请输入摄像头地址！</string>
    <string name="save_params_success">保存成功！</string>

    <!-- 摄像监控界面 -->
    <string name="start_camera">开启监控</string>
    <string name="close_camera">关闭监控</string>
    <string name="monitor_camera">摄像监控</string>

    <!-- 抽屉导航界面-->
    <string name="menu_item1">管理</string>
    <string name="menu_item2">个人设置</string>
    <string name="menu_item3">语言选择</string>
    <string name="menu_item4">关于软件</string>
    <string name="menu_item5">更多</string>
    <string name="menu_item6">切换账户</string>
    <string name="menu_item7">退出程序</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_1">返回</string>
    <string name="userlayout_text1">用户信息</string>
    <string name="userlayout_text2">账　　号：</string>
    <string name="userlayout_text3">类　　别：</string>
    <string name="userlayout_text4">性　　别：</string>
    <string name="userlayout_text5">手机号码：</string>
    <string name="userlayout_text6">电子邮件：</string>
    <string name="userlayout_text7">住　　址：</string>
    <string name="userlayout_text8">视频控制：</string>
    <string name="userlayout_text9">其他控制：</string>
    <string name="normal_account">普通账号</string>
    <string name="language_title">语言选择</string>
    <string name="copyRight_text"></string>
    <string name="about">关于</string>
    <string name="account_out">注销</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_ok">确定</string>
    <string name="btn_out">退出</string>
    <string name="toast_3">此操作将会退出当前账号！</string>
    <string name="toast_4">退出后将停止推送告警信息！</string>

    <!-- 用户登录和注册界面-->
    <string name="account_id_account">账号</string>
    <string name="account_id_password">密码</string>
    <string name="account_loginUp">登  录</string>
    <string name="account_register">注册账号</string>
    <string name="register_account">请输入账号</string>
    <string name="register_password">请输入密码</string>
    <string name="register_sex">请输入性别</string>
    <string name="register_phone">请输入电话</string>
    <string name="register_email">请输入邮箱</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="register_ok">注册完成</string>
    <string name="account_toast_text1">用户名或密码不能为空！</string>
    <string name="account_toast_text2">帐号或密码错误！</string>

    <!-- 语言界面-->
    <string name="language_zh">简体中文</string>
    <string name="language_zh_rTW">繁體中文</string>
    <string name="language_default">系统默认</string>


</resources>
